# HexHex

./: .gitignore  CLAUDE.md  Pipfile  config.ini  create_data.py  create_model.py  device.py  evaluate.py  evaluate_on_data.py  evaluate_puzzles.py  evaluate_two_models.py  flow.ini  hexboard.py  hexconvolution.py  hexgame.py  interactive.py  logger.py  main.py  multi_evaluate_model.py  multi_self_training.py  noise.py  package-lock.json  package.json  play.ipynb  play_cli.py  playwright.config.ts  pyproject.toml  readme.md  repeated_data_and_training.ini  repeated_data_and_training.py  repeated_self_training.ini  repeated_self_training.py  requirements.txt  resnet.py  run_example.py  sample_bayes_visualisation.ipynb  sample_config.ini  train.py  utils.py
app/: deploy.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/public/: 11_2w4_1100.onnx  11_2w4_1262.onnx  11_2w4_2000.onnx  index.html
app/src/: App.css  App.js  App.tsx  main.tsx
conf/: config.yaml
conf/preset/: 11x11.yaml  3x3.yaml  4x4.yaml  5x5.yaml  dev.yaml  prod.yaml  smoke.yaml
data/: .gitignore  puzzle.pt
evaluation/: call_bayeselo.sh  elo.py  tournament.py
hex/creation/: create_data.py  create_model.py  noise.py  puzzle.py
hex/elo/: elo.py  match.py  tournament.py
hex/evaluation/: evaluate_on_data.py  evaluate_two_models.py  multi_evaluate_model.py  win_position.py
hex/interactive/: gui.py  interactive.py  play_cli.py
hex/logic/: hexboard.py  hexgame.py
hex/model/: conversion.py  conversion_size.py  conversion_type.py  hexconvolution.py  mcts.py
hex/training/: bayesian_optimization.py  multi_self_training.py  repeated_data_and_training.py  repeated_self_training.ini  repeated_self_training.py  star_league.py  train.py
hex/utils/: logger.py  losses.py  summary.py  utils.py
hex/visualization/: image.py  plot_training.py
hexhex/: README.md  __main__.py
hexhex/creation/: create_data.py  create_model.py  noise.py  puzzle.py
hexhex/elo/: elo.py
hexhex/evaluation/: evaluate_two_models.py  win_position.py
hexhex/export/: onnx_export.py
mcts/: mcts.py
models/: .gitignore  11_2w4_1100.pt  11_2w4_1262.pt  11_2w4_2000.pt  mcts_5_10l_32c_initial.pt
reference_models/: .gitignore  4x4_adam.pt  4x4_adam.txt  4x4_sgd.pt  4x4_sgd.txt
sample_files/: bayes_visualisation.ipynb  bo_parameters.json  config.ini  play.ipynb  reference_models.json
tests/: run_example.py  test_core.py  test_metrics.py  test_paths.py  test_solver.py  test_temperature.py
visualization/: gui.py  image.py  plot_training.py
(+50 files in other folders)
