[project]
name = "hexhex"
version = "0.1.0"
description = "Reinforcement learning agent for the board game Hex"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.13.0,<2.3.0", # specific range for macos x86_64 support.
    "numpy<2", # Also macos x86_64 issue, maybe can be worked around.
    "pygame",
    "tensorboard",
    "scikit-optimize",
    "matplotlib",
    "jupyter",
    "image",
    "future",
    "scikit-learn",
    "setuptools<70", # Old version for tensorboard to work.
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hexhex*"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
