[project]
name = "hexhex"
version = "0.1.0"
description = "Reinforcement learning agent for the board game Hex"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.13.0,<2.3.0", # specific range for macos x86_64 support.
    "numpy<2", # Also macos x86_64 issue, maybe can be worked around.
    "pygame",
    "tensorboard",
    "hydra-core>=1.3.0",
    "matplotlib",
    "jupyter",
    "image",
    "future",
    "scikit-learn",
    "setuptools<70", # Old version for tensorboard to work.
    "onnx>=1.19.0",
    "ml-dtypes>=0.4.1", # This version is needed for onnx to work properly.
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hexhex*"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
required-environments = "sys_platform == 'darwin' and platform_machine == 'x86_64'"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "onnxruntime",
]
